    base_dn='uid=%(username)s,ou=people,dc=company,dc=com'
  * move or delete multiple attachments (see checkboxes and buttons on the
    AttachFile view). Be careful: in the same way as you could delete a single
    attachment with one click, you can now delete all attachments of a page
    with one click (we don't ask for a 2nd confirmation, so think first).

  Fixes:
  * do not create empty pagedirs (with empty edit-log). To clean up all the
    trash pagedirs, use moin ... maint cleanpage.
  * AttachFile do=get and do=view: send 404 status if file does not exist
  * link rel="Alternate" links: rather use page.url than request.href, so
    url_prefix_action gets used for the (print and raw) action URLs
  * fixed wrong detection of UI language from accept-language header for not
    logged-in users if the language identifier there was (partially) uppercase.
  * fix Python 2.7.4/5 compatibility issue with rss_rc action using handler._out
  * fix "moin import wikipage" timestamp confusion
  * use 302 http status for #redirect as some clients cache 301 redirects, but
    the #redirect might get changed or removed later (so it should not be
    cached and we also can't really say it is permanent)
  * fix crash when macro names contain non-ascii chars
  * CopyPage action: fix NameError exception when TextCha was answered wrong
  * docbook formatter: fix image URL generation, avoid script name duplication

  Other changes:
  * rss_rc action (RSS feed) is now much faster / much less resource consuming
    when requested for a specific single page. As we have a link to this in
    every page's html output, this likely also lightens the load caused by bots
    and search engine crawlers.
  * tuned editlog.news() - only open/read log if there is new stuff in it after
    last read position
  * improve python2.5 compatibility (with_statement)
  * add bingbot to ua_spiders
  * upgraded bundled werkzeug to 0.8.3
  * upgraded bundled passlib to 1.6.2